a11y: fix up some link color contrast

--- a/css/bjc.css
+++ b/css/bjc.css
@@ -371,8 +371,6 @@ summary::-webkit-details-marker {
 
 /* A11Y Handle poor color combos: */
 .takeItFurther a,
-.atwork a,
-.atworkFullWidth a,
 .time a,
 .apStandards a,
 .Standards a {
@@ -476,7 +474,7 @@ summary::-webkit-details-marker {
 }
 .atwork,
 .atworkFullWidth {
-  background-color: #fcc589;
+  background-color: #fcc890;
 }
 .vocab,
 .vocabBig,
